<resources>
    <string name="app_name">Hoppy Hour</string>
    <string name="get_started">Get Started</string>
    <string name="hoppy_hour">Hoppy Hour</string>
    <string name="discover_new_beers">Discover new beers</string>
    <string name="beer_image">beer image</string>
    <string name="onboarding_info">• Search for specific beers by name, style, or brewery.\n\n• Save your favorite beers to your \"Favorites\" list.\n\n• Keep track of the beers you\'ve tried and rate them.</string>
    <string name="beer_name">beer name</string>
    <string name="beer_tagline">beer tagline</string>
    <string name="textview">TextView</string>
    <string name="retry">retry</string>
    <string name="percentage_text">%</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="food_pairing">Food Pairing</string>
    <string name="brewers_tips">Brewers tips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>