<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.josphatmwania.hoppyhour.feature_beer.presentation.ui.viewmodels.BeerItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imv_beer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/beer_image" />

        <TextView
            android:id="@+id/txv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/beer_name"
            app:layout_constraintStart_toEndOf="@+id/imv_beer"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txv_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/beer_tagline"
            app:layout_constraintStart_toEndOf="@+id/imv_beer"
            app:layout_constraintTop_toBottomOf="@+id/txv_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>